构建基础内容

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vue.js</title>
     <!-- Latest compiled and minified CSS -->
     <!-- Latest compiled and minified JavaScript -->
+    <script type="text/javascript" src="./src/dist/jquery.js"></script>
     <script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script><!-- Tether for Bootstrap -->
     <link rel="stylesheet" href="/dist/style.css">
 </head>
